--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "gsap": "^3.11.5",
+    "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "next": "13.4.2",
