--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
     "gsap": "^3.11.5",
     "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
+    "ms": "^2.1.3",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "request-ip": "^3.3.0",
     "tailwindcss": "3.3.2"
   }
 }
