--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.350.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
@@ -17,6 +18,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1395.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "firebase": "^9.22.1",
